[gd_scene load_steps=3 format=3 uid="uid://c56d1w4yo8uu6"]

[ext_resource type="Script" path="res://src/menu/score_menu.gd" id="1_5ltut"]
[ext_resource type="Texture2D" uid="uid://bctdxtksa3qmf" path="res://assets/ScoreScreen.png" id="2_m312k"]

[node name="ScoreMenu" type="Node"]
script = ExtResource("1_5ltut")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.0862745, 0.160784, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(1080, 1080)
layout_mode = 2
texture = ExtResource("2_m312k")
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 662.0
offset_top = 443.0
offset_right = -318.0
offset_bottom = -605.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.0862745, 0.160784, 1)

[node name="ColorRect2" type="ColorRect" parent="CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 648.0
offset_top = 553.0
offset_right = -332.0
offset_bottom = -495.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.0862745, 0.160784, 1)

[node name="HealthBonus" type="Label" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 665.0
offset_top = 445.0
offset_right = 686.0
offset_bottom = 474.0
text = "0"
horizontal_alignment = 1

[node name="SpeedBonus" type="Label" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 651.0
offset_top = 555.0
offset_right = 672.0
offset_bottom = 584.0
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
text = "Press any key to continue..."
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
